--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1202,7 +1202,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of ACL},
   note={Accepted},
-  presort={08}
+  presort={08},
+  rmdnote={code=https://github.com/JunW15/NumberTest}
 }
 
 @inproceedings{Sun2021strategic,
