--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1131,10 +1131,10 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzm\'{a}n and Benjamin I. P. Rubinstein and Trevor Cohn},
   booktitle={Proceedings of the Web Conference 2021},
   series={WWW},
-  note={Accepted},
   year={2021},
+  pages={3638--3650},
   presort={02},
-  rmdnote={pdf=https://arxiv.org/abs/2011.00675},
+  rmdnote={pdf=https://arxiv.org/abs/2011.00675;pub=https://dl.acm.org/doi/abs/10.1145/3442381.3450034},
   ranknote={astar}
 }
 
