--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1143,10 +1143,10 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2021 IEEE 37th International Conference on Data Engineering},
   series={ICDE},
   author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
-  note = {Accepted},
   year={2021},
+  pages={600--611},
   presort={03},
-  rmdnote={full=https://arxiv.org/abs/2010.09208},
+  rmdnote={full=https://arxiv.org/abs/2010.09208;pub=https://ieeexplore.ieee.org/abstract/document/9458699},
   ranknote={astar}
 }
 
