--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1180,9 +1180,9 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Proceedings of the 35th AAAI Conference on Artificial Intelligence},
   series={AAAI},
   year={2021},
-  note={In press},
+  pages={11682--11690},
   presort={06},
-  rmdnote={full=https://arxiv.org/abs/2006.15417},
+  rmdnote={full=https://arxiv.org/abs/2006.15417;pub=https://ojs.aaai.org/index.php/AAAI/article/view/17389},
   ranknote={astar}
 }
 
