Public access AoAS preprint due to DoD funding

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1018,7 +1018,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   number={2},
   pages={977-992},
   presort={03},
-  rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326},
+  rmdnote={pdf=papers/aoas_v3.pdf;pub=http://dx.doi.org/10.1214/20-AOAS1326},
   ranknote={astar}
 }
 
