acl findings arxiv

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1193,7 +1193,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Findings of ACL},
   note={Accepted},
   presort={07},
-  rmdnote={code=https://github.com/JunW15/Monolingual-Attack}
+  rmdnote={full=https://arxiv.org/abs/2107.05243;code=https://github.com/JunW15/Monolingual-Attack}
 }
 
 @inproceedings{xu2021as,
