easy as on arxiv

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1203,7 +1203,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Findings of ACL},
   note={Accepted},
   presort={08},
-  rmdnote={code=https://github.com/JunW15/NumberTest}
+  rmdnote={full=https://arxiv.org/abs/2107.08357;code=https://github.com/JunW15/NumberTest}
 }
 
 @inproceedings{Sun2021strategic,
