--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1206,12 +1206,23 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={full=https://arxiv.org/abs/2107.08357;code=https://github.com/JunW15/NumberTest}
 }
 
+@inproceedings{Sun2021A,
+  title={A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons},
+  author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
+  year={2021},
+  booktitle={2021 IEEE 60th Conference on Decision and Control},
+  series={CDC},
+  note={Accepted},
+  presort={09}
+}
+
 @inproceedings{Sun2021strategic,
   title={Strategic mitigation against wireless attacks on autonomous platoons},
   author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
   year={2021},
   booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
   series={ECML-PKDD},
-  presort={09},
+  note={Accepted},
+  presort={10},
   rmdnote={code=https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/}
 }
