--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1226,3 +1226,13 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   presort={10},
   rmdnote={code=https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/}
 }
+
+@inproceedings{pham2021towards,
+  title={Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing},
+  author={Pham, Van-Thuan and Nguyen, Manh-Dung and Ta, Quang-Trung and Murray, Toby and Rubinstein, Benjamin I. P.},
+  year={2021},
+  booktitle={Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering},
+  series={ASE},
+  note={New Ideas and Emerging Results (NIER) track},
+  presort={11}
+}
