--- a/software.Rmd
+++ b/software.Rmd
@@ -9,6 +9,12 @@ My [group](group.html) and I have implemented our research contributions as usef
 
 ***
 
+[<img src="images/activeeval.png" style="width:150px; margin-right: 24px" align="left">](https://github.com/ngmarchant/activeeval)
+
+[**`ActiveEval`**](https://github.com/ngmarchant/activeeval) implements a framework for active evaluation [[KDD2021 paper]](https://arxiv.org/abs/2006.06963) in open-source Python. It solves the problem of estimating the performance of a classifier on an unlabeled pool (test set), using labels queried from an oracle (e.g. an expert or crowdsourcing platform). Several methods are implemented including passive sampling, stratified sampling, static importance sampling and adaptive importance sampling. The importance sampling methods aim to minimise the variance of the estimated performance measure, and can yield more precise estimates for a given label budget. Several evaluation measures are currently supported including accuracy, F-measure, and precision-recall curves. The package is designed to be extensible.
+
+***
+
 [<img src="images/d-blink.png" style="width:150px; margin-right: 24px" align="left">](https://github.com/ngmarchant/dblink)
 
 [**`d-blink`**](https://github.com/ngmarchant/dblink) is an open-source Apache Spark package for end-to-end Bayesian statistical record linkage. The package implements our [[Marchant et al. 2020]](https://amstat.tandfonline.com/doi/full/10.1080/10618600.2020.1825451) extensions to the `blink` model of [[Steorts 2015]](https://projecteuclid.org/euclid.ba/1441790411). As a fully Bayesian model, `blink` models a (posterior) distribution over all matchings of records, useful for propagating uncertainty through downstream analyses. The approach is also unsupervised, meaning it does not require ground-truth annotations of examples of matching records to train on. `d-blink` makes a number of non-trivial extensions that facilitate distributed inference for significantly scaling `blink` up to larger datasets.  
