software, pages updates

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1166,11 +1166,12 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
 @inproceedings{weerasinghe2021closing,
   title={Closing the {BIG-LID}: An Effective Local Intrinsic Dimensionality Defense for Nonlinear Regression Poisoning},
   author={Weerasinghe, Sandamal and Rubinstein, Benjamin I. P. and Alpcan, Tansu and Erfani, Sarah and Leckie, Christopher and Abraham, Tamas},
-  booktitle={The 30th International Joint Conference on Artificial Intelligence},
+  booktitle={Proceedings of the Thirtieth International Joint Conference on Artificial Intelligence},
   series={IJCAI},
   year={2021},
-  note={In press},
+  pages={3176--3184},
   presort={05},
+  rmdnote={pub=https://www.ijcai.org/proceedings/2021/0437.pdf},
   ranknote={astar}
 }
 
@@ -1234,5 +1235,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering},
   series={ASE},
   note={New Ideas and Emerging Results (NIER) track},
+  rmdnote={code=https://github.com/MelbourneFuzzingHub/aflteam?s=09;full=https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf},
   presort={11}
 }
