--- a/group.Rmd
+++ b/group.Rmd
@@ -10,9 +10,7 @@ I am fortunate to supervise a brilliant group of researchers.
 ### Postdocs
 
 * [Neil Marchant](https://www.ngmarchant.net/) (2021-- ). Machine learning in privacy and databases.
-* [Chang Xu](https://changxu.io/) (w Cohn 2020-- ). Adversarial learning for NLP.
 * [Andrew Cullen](https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au) (2019-- ). Certified robustness.
-* [Sandamal Weerasinghe](https://cis.unimelb.edu.au/people/prameesha-weerasinghe) (w Leckie, Erfani, Alpcan 2019-- ). Adversarial machine learning.
 * [Shuo Zhou](https://shuozhou.github.io/) (w Tordesillas, Bailey, Bondell 2019-- ). Complex networks in materials science, cybersecurity.
 
 ### PhD students
@@ -44,6 +42,8 @@ I am fortunate to supervise a brilliant group of researchers.
 
 ### Other Alumni
 
+* [Sandamal Weerasinghe](https://cis.unimelb.edu.au/people/prameesha-weerasinghe) (postdoc 2019--21). Adversarial machine learning.
+* [Chang Xu](https://changxu.io/) (postdoc 2020--21). Adversarial learning for NLP → Data Scientist, News Corp, Sydney.
 * [Thibaut Lienart](https://tlienart.github.io/) (postdoc 2018--19). Adversarial machine learning → Associate, Alan Turing Institute
 * [Yi Han](https://scholar.google.com/citations?user=e_mtK4kAAAAJ&hl=en) (postdoc 2016--19). Adversarial reinforcement learning → Postdoc at Melbourne
 * [Shen Wang](https://scholar.google.com/citations?user=TpErHPkAAAAJ&hl=en) (postdoc 2016--18). Probabilistic programming, databases, record linkage.
