--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1238,3 +1238,13 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={code=https://github.com/MelbourneFuzzingHub/aflteam?s=09;full=https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf},
   presort={11}
 }
+
+@misc{perera2021nodba,
+  title={No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees},
+  author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  note = {arXiv:2108.10130 [cs.DB]},
+  year={2021},
+  month={Aug},
+  presort={12},
+  rmdnote={pdf=https://arxiv.org/abs/2108.10130}
+}
