--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1187,13 +1187,23 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   ranknote={astar}
 }
 
+@inproceedings{Sun2021A,
+  title={A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons},
+  author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
+  year={2021},
+  booktitle={2021 IEEE 60th Conference on Decision and Control},
+  series={CDC},
+  note={Accepted},
+  presort={07}
+}
+
 @inproceedings{wang2021putting,
   title={Putting words into the system's mouth: A targeted attack on neural machine translation using monolingual data poisoning},
   author={Wang, Jun and Xu, Chang and Guzm\'{a}n, Francisco and El-Kishky, Ahmed and Tang, Yuqing and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   year={2021},
   booktitle={Findings of ACL},
   note={Accepted},
-  presort={07},
+  presort={08},
   rmdnote={full=https://arxiv.org/abs/2107.05243;code=https://github.com/JunW15/Monolingual-Attack}
 }
 
@@ -1203,18 +1213,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of ACL},
   note={Accepted},
-  presort={08},
+  presort={09},
   rmdnote={full=https://arxiv.org/abs/2107.08357;code=https://github.com/JunW15/NumberTest}
-}
-
-@inproceedings{Sun2021A,
-  title={A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons},
-  author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
-  year={2021},
-  booktitle={2021 IEEE 60th Conference on Decision and Control},
-  series={CDC},
-  note={Accepted},
-  presort={09}
 }
 
 @inproceedings{Sun2021strategic,
@@ -1239,12 +1239,21 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   presort={11}
 }
 
+@inproceedings{xu2021mitigating,
+  title={Mitigating Data Poisoning in Text Classification with Differential Privacy},
+  author={Xu, Chang and Wang, Jun and Guzm\'{a}n, Francisco and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  year={2021},
+  booktitle={Findings of EMNLP},
+  note={Accepted},
+  presort={12}
+}
+
 @misc{perera2021nodba,
   title={No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees},
   author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
   note = {arXiv:2108.10130 [cs.DB]},
   year={2021},
   month={Aug},
-  presort={12},
+  presort={13},
   rmdnote={pdf=https://arxiv.org/abs/2108.10130}
 }
