--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1187,6 +1187,15 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   ranknote={astar}
 }
 
+@inproceedings{oetomo2021cutting,
+  title={Cutting to the Chase with Warm-Start Contextual Bandits},
+  author={Oetomo, Bastian and Perera, R. Malinga and Borovica-Gajic, Renata and Rubinstein, Benjamin I. P.},
+  year={2021},
+  series={ICDM},
+  booktitle={2021 IEEE 21th International Conference on Data Mining},
+  presort={07}
+}
+
 @inproceedings{Sun2021A,
   title={A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons},
   author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
@@ -1194,7 +1203,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2021 IEEE 60th Conference on Decision and Control},
   series={CDC},
   note={Accepted},
-  presort={07}
+  presort={08}
 }
 
 @inproceedings{wang2021putting,
@@ -1203,7 +1212,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of ACL},
   note={Accepted},
-  presort={08},
+  presort={09},
   rmdnote={full=https://arxiv.org/abs/2107.05243;code=https://github.com/JunW15/Monolingual-Attack}
 }
 
@@ -1213,7 +1222,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of ACL},
   note={Accepted},
-  presort={09},
+  presort={10},
   rmdnote={full=https://arxiv.org/abs/2107.08357;code=https://github.com/JunW15/NumberTest}
 }
 
@@ -1224,7 +1233,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
   series={ECML-PKDD},
   note={Accepted},
-  presort={10},
+  presort={11},
   rmdnote={code=https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/}
 }
 
@@ -1236,7 +1245,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={ASE},
   note={New Ideas and Emerging Results (NIER) track},
   rmdnote={code=https://github.com/MelbourneFuzzingHub/aflteam?s=09;full=https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf},
-  presort={11}
+  presort={12}
 }
 
 @inproceedings{xu2021mitigating,
@@ -1245,7 +1254,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of EMNLP},
   note={Accepted},
-  presort={12}
+  presort={13}
 }
 
 @misc{perera2021nodba,
@@ -1254,6 +1263,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2108.10130 [cs.DB]},
   year={2021},
   month={Aug},
-  presort={13},
+  presort={14},
   rmdnote={pdf=https://arxiv.org/abs/2108.10130}
 }
