kdd pub and vid

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1120,9 +1120,9 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
   series={KDD},
   year={2021},
-  note={Accepted},
+  pages={1180--1190},
   presort={01},
-  rmdnote={full=https://arxiv.org/abs/2006.06963;code=https://github.com/ngmarchant/activeeval},
+  rmdnote={full=https://arxiv.org/abs/2006.06963;pub=https://dl.acm.org/doi/10.1145/3447548.3467435;code=https://github.com/ngmarchant/activeeval;vid=https://dl.acm.org/doi/10.1145/3447548.3467435#video_stream_uuid%3Aeff6337b-7642-4147-a135-8d0dac98bbce},
   ranknote={astar}
 }
 
