--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1134,7 +1134,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   pages={3638--3650},
   presort={02},
-  rmdnote={pdf=https://arxiv.org/abs/2011.00675;pub=https://dl.acm.org/doi/abs/10.1145/3442381.3450034},
+  rmdnote={pdf=https://arxiv.org/abs/2011.00675;pub=https://dl.acm.org/doi/abs/10.1145/3442381.3450034;vid=https://www.youtube.com/watch?v=PDt5Dgxe2y0},
   ranknote={astar}
 }
 
