icde vid update

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1146,7 +1146,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   pages={600--611},
   presort={03},
-  rmdnote={full=https://arxiv.org/abs/2010.09208;pub=https://ieeexplore.ieee.org/abstract/document/9458699;vid=https://youtu.be/wjD9RnrBhDY},
+  rmdnote={full=https://arxiv.org/abs/2010.09208;pub=https://ieeexplore.ieee.org/abstract/document/9458699;vid=https://youtu.be/7PohjU29Hjk},
   ranknote={astar}
 }
 
