--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1210,31 +1210,31 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   title={Putting words into the system's mouth: A targeted attack on neural machine translation using monolingual data poisoning},
   author={Wang, Jun and Xu, Chang and Guzm\'{a}n, Francisco and El-Kishky, Ahmed and Tang, Yuqing and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   year={2021},
-  booktitle={Findings of ACL},
-  note={Accepted},
+  booktitle={Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021},
+  pages={1463--1473},
   presort={09},
-  rmdnote={full=https://arxiv.org/abs/2107.05243;code=https://github.com/JunW15/Monolingual-Attack}
+  rmdnote={full=https://arxiv.org/abs/2107.05243;code=https://github.com/JunW15/Monolingual-Attack;pub=https://aclanthology.org/2021.findings-acl.127}
 }
 
 @inproceedings{xu2021as,
   title={As Easy as 1, 2, 3: Behavioural Testing of {NMT} Systems for Numerical Translation},
   author={Wang, Jun and Xu, Chang and Guzm\'{a}n, Francisco and El-Kishky, Ahmed and Tang, Yuqing and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   year={2021},
-  booktitle={Findings of ACL},
-  note={Accepted},
+  booktitle={Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021},
+  pages={4711--4717},
   presort={10},
-  rmdnote={full=https://arxiv.org/abs/2107.08357;code=https://github.com/JunW15/NumberTest}
+  rmdnote={full=https://arxiv.org/abs/2107.08357;code=https://github.com/JunW15/NumberTest;pub=https://aclanthology.org/2021.findings-acl.415}
 }
 
 @inproceedings{Sun2021strategic,
   title={Strategic mitigation against wireless attacks on autonomous platoons},
   author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
   year={2021},
-  booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  booktitle={Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track},
   series={ECML-PKDD},
-  note={Accepted},
+  pages={69--84},
   presort={11},
-  rmdnote={code=https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/}
+  rmdnote={code=https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/;pub=https://link.springer.com/chapter/10.1007/978-3-030-86514-6_5}
 }
 
 @inproceedings{pham2021towards,
