--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1266,3 +1266,14 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   presort={14},
   rmdnote={pdf=https://arxiv.org/abs/2108.10130}
 }
+
+@misc{marchant2021hard,
+  title={Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
+  author={Neil G. Marchant and Benjamin I. P. Rubinstein and Scott Alfeld},
+  note = {arXiv:2109.08266 [cs.LG]},
+  year={2021},
+  month={Sep},
+  presort={15},
+  rmdnote={pdf=https://arxiv.org/abs/2109.08266}
+}
+  }
