reinstate udl20 workshop paper

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1071,6 +1071,15 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   ranknote={none}
 }
 
+@misc{yang2020characterizing,
+  title={Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness},
+  year={2020},
+  author={Yang, Zhuolin and Li, Linyi and Xu, Xiaojun and Zuo, Shiliang and Chen, Qian and Rubinstein, Benjamin and Zhang, Ce and Li, Bo},
+  presort={11},
+  note={Appeared at ICML2020 Workshop on Uncertainty & Robustness in Deep Learning},
+  rmdnote={pdf=http://www.gatsby.ucl.ac.uk/~balaji/udl2020/accepted-papers/UDL2020-paper-071.pdf}
+}
+
 @inproceedings{roohi2020assessing,
   title={Assessing Centrality Without Knowing Connections},
   year={2020},
@@ -1105,7 +1114,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pdf=https://arxiv.org/abs/2006.13120}
 }
 
-@inproceedings{yang2020characterizing,
+@inproceedings{yang2021characterizing,
   title={Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness},
   year={2021},
   author={Yang, Zhuolin and Li, Linyi and Xu, Xiaojun and Zuo, Shiliang and Chen, Qian and Rubinstein, Benjamin and Zhang, Ce and Li, Bo},
@@ -1113,7 +1122,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems},
   series={NeurIPS},
   note={Accepted},
-  rmdnote={pdf=http://www.gatsby.ucl.ac.uk/~balaji/udl2020/accepted-papers/UDL2020-paper-071.pdf}
+  rmdnote={full=https://arxiv.org/abs/2104.00671}
 }
 
 @inproceedings{marchant2021needle,
