--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1022,16 +1022,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   ranknote={astar}
 }
 
-@misc{edwards2020a,
-  title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
-  author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
-  note = {arXiv:2007.05975 [cs.IT]},
-  year={2020},
-  month={Jul},
-  presort={07},
-  rmdnote={pdf=https://arxiv.org/abs/2007.05975}
-}
-
 @inproceedings{liu2020legionb,
   title={Legion: Best-First Concolic Testing},
   year={2020},
@@ -1125,6 +1115,16 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={full=https://arxiv.org/abs/2104.00671}
 }
 
+@article{edwards2020a,
+  title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
+  author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
+  journal={IEEE Transactions on Information Theory},
+  note = {Accepted},
+  year={2021},
+  presort={02},
+  rmdnote={full=https://arxiv.org/abs/2007.05975}
+}
+
 @inproceedings{marchant2021needle,
   title={Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance},
   author={Neil G. Marchant and Benjamin I. P. Rubinstein},
@@ -1132,7 +1132,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={KDD},
   year={2021},
   pages={1180--1190},
-  presort={02},
+  presort={03},
   rmdnote={full=https://arxiv.org/abs/2006.06963;pub=https://dl.acm.org/doi/10.1145/3447548.3467435;code=https://github.com/ngmarchant/activeeval;vid=https://dl.acm.org/doi/10.1145/3447548.3467435#video_stream_uuid%3Aeff6337b-7642-4147-a135-8d0dac98bbce},
   ranknote={astar}
 }
@@ -1144,7 +1144,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={WWW},
   year={2021},
   pages={3638--3650},
-  presort={03},
+  presort={04},
   rmdnote={pdf=https://arxiv.org/abs/2011.00675;pub=https://dl.acm.org/doi/abs/10.1145/3442381.3450034;vid=https://www.youtube.com/watch?v=PDt5Dgxe2y0},
   ranknote={astar}
 }
@@ -1156,7 +1156,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
   year={2021},
   pages={600--611},
-  presort={04},
+  presort={05},
   rmdnote={full=https://arxiv.org/abs/2010.09208;pub=https://ieeexplore.ieee.org/abstract/document/9458699;vid=https://youtu.be/7PohjU29Hjk},
   ranknote={astar}
 }
@@ -1169,7 +1169,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   pages={406--421},
   volume={30},
   number={2},
-  presort={05},
+  presort={06},
   rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink;pub=https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451},
   ranknote={astar}
 }
@@ -1181,7 +1181,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={IJCAI},
   year={2021},
   pages={3176--3184},
-  presort={06},
+  presort={07},
   rmdnote={pub=https://www.ijcai.org/proceedings/2021/0437.pdf},
   ranknote={astar}
 }
@@ -1193,7 +1193,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={AAAI},
   year={2021},
   pages={11682--11690},
-  presort={07},
+  presort={08},
   rmdnote={full=https://arxiv.org/abs/2006.15417;pub=https://ojs.aaai.org/index.php/AAAI/article/view/17389},
   ranknote={astar}
 }
@@ -1204,7 +1204,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   series={ICDM},
   booktitle={2021 IEEE 21th International Conference on Data Mining},
-  presort={08}
+  presort={09}
 }
 
 @inproceedings{Sun2021A,
@@ -1214,7 +1214,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2021 IEEE 60th Conference on Decision and Control},
   series={CDC},
   note={Accepted},
-  presort={09}
+  presort={10}
 }
 
 @inproceedings{wang2021putting,
@@ -1223,7 +1223,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021},
   pages={1463--1473},
-  presort={10},
+  presort={11},
   rmdnote={full=https://arxiv.org/abs/2107.05243;code=https://github.com/JunW15/Monolingual-Attack;pub=https://aclanthology.org/2021.findings-acl.127}
 }
 
@@ -1233,7 +1233,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021},
   pages={4711--4717},
-  presort={11},
+  presort={12},
   rmdnote={full=https://arxiv.org/abs/2107.08357;code=https://github.com/JunW15/NumberTest;pub=https://aclanthology.org/2021.findings-acl.415}
 }
 
@@ -1244,7 +1244,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track},
   series={ECML-PKDD},
   pages={69--84},
-  presort={12},
+  presort={13},
   rmdnote={code=https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/;pub=https://link.springer.com/chapter/10.1007/978-3-030-86514-6_5}
 }
 
@@ -1256,7 +1256,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={ASE},
   note={New Ideas and Emerging Results (NIER) track},
   rmdnote={code=https://github.com/MelbourneFuzzingHub/aflteam?s=09;full=https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf},
-  presort={13}
+  presort={14}
 }
 
 @inproceedings{xu2021mitigating,
@@ -1265,7 +1265,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of EMNLP},
   note={Accepted},
-  presort={14}
+  presort={15}
 }
 
 @misc{perera2021nodba,
@@ -1274,7 +1274,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2108.10130 [cs.DB]},
   year={2021},
   month={Aug},
-  presort={15},
+  presort={16},
   rmdnote={pdf=https://arxiv.org/abs/2108.10130}
 }
 
@@ -1284,6 +1284,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2109.08266 [cs.LG]},
   year={2021},
   month={Sep},
-  presort={16},
+  presort={17},
   rmdnote={pdf=https://arxiv.org/abs/2109.08266}
 }
