--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1214,7 +1214,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2021 IEEE 60th Conference on Decision and Control},
   series={CDC},
   note={Accepted},
-  presort={10}
+  presort={10},
+  rmdnote={full=http://arxiv.org/abs/2109.14208}
 }
 
 @inproceedings{wang2021putting,
