--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1122,7 +1122,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {Accepted},
   year={2021},
   presort={02},
-  rmdnote={full=https://arxiv.org/abs/2007.05975}
+  rmdnote={full=https://arxiv.org/abs/2007.05975;pub=https://ieeexplore.ieee.org/document/9576501}
 }
 
 @inproceedings{marchant2021needle,
