aaai code; software links to code

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1194,7 +1194,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   pages={11682--11690},
   presort={08},
-  rmdnote={full=https://arxiv.org/abs/2006.15417;pub=https://ojs.aaai.org/index.php/AAAI/article/view/17389},
+  rmdnote={full=https://arxiv.org/abs/2006.15417;pub=https://ojs.aaai.org/index.php/AAAI/article/view/17389;code=https://github.com/zhangrh93/InvertibleCE},
   ranknote={astar}
 }
 
