--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1264,10 +1264,12 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   title={Mitigating Data Poisoning in Text Classification with Differential Privacy},
   author={Xu, Chang and Wang, Jun and Guzm\'{a}n, Francisco and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   year={2021},
-  booktitle={Findings of EMNLP},
-  note={Accepted},
-  presort={15}
+  booktitle={Findings of the Association for Computational Linguistics: EMNLP 2021},
+  pages={4348--4356},
+  presort={15},
+  rmdnote={pub=https://aclanthology.org/2021.findings-emnlp.369;pdf=https://aclanthology.org/2021.findings-emnlp.369.pdf}
 }
+
 
 @misc{perera2021nodba,
   title={No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees},
