--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1270,6 +1270,15 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pub=https://aclanthology.org/2021.findings-emnlp.369;pdf=https://aclanthology.org/2021.findings-emnlp.369.pdf}
 }
 
+@article{wang2021machine,
+title = {Machine Learning in Network Anomaly Detection: A Survey},
+author = {Song Wang and Juan Balarezo and Sithamparanathan Kandeepan and Akram Al-Hourani and Karina Gomez and Ben Rubinstein},
+year = {2021},
+journal = {IEEE Access},
+note = {Accepted},
+presort = {16},
+rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
+}
 
 @misc{perera2021nodba,
   title={No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees},
@@ -1277,7 +1286,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2108.10130 [cs.DB]},
   year={2021},
   month={Aug},
-  presort={16},
+  presort={17},
   rmdnote={pdf=https://arxiv.org/abs/2108.10130}
 }
 
@@ -1287,6 +1296,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2109.08266 [cs.LG]},
   year={2021},
   month={Sep},
-  presort={17},
+  presort={18},
   rmdnote={pdf=https://arxiv.org/abs/2109.08266}
 }
