--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1112,7 +1112,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems},
   series={NeurIPS},
   note={Accepted},
-  rmdnote={full=https://arxiv.org/abs/2104.00671}
+  rmdnote={pub=https://papers.nips.cc/paper/2021/hash/937936029af671cf479fa893db91cbdd-Abstract.html;full=https://arxiv.org/abs/2104.00671}
 }
 
 @article{edwards2020a,
@@ -1275,7 +1275,8 @@ title = {Machine Learning in Network Anomaly Detection: A Survey},
 author = {Song Wang and Juan Balarezo and Sithamparanathan Kandeepan and Akram Al-Hourani and Karina Gomez and Ben Rubinstein},
 year = {2021},
 journal = {IEEE Access},
-note = {Accepted},
+pages = {152379--152396},
+volume = {9},
 presort = {16},
 rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
 }
@@ -1290,12 +1291,13 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2108.10130}
 }
 
-@misc{marchant2021hard,
+@inproceedings{marchant2022hard,
   title={Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
   author={Neil G. Marchant and Benjamin I. P. Rubinstein and Scott Alfeld},
-  note = {arXiv:2109.08266 [cs.LG]},
-  year={2021},
-  month={Sep},
-  presort={18},
-  rmdnote={pdf=https://arxiv.org/abs/2109.08266}
+  year={2022},
+  booktitle={Proceedings of the 36th AAAI Conference on Artificial Intelligence},
+  series={AAAI},
+  note={Accepted},
+  presort={01},
+  rmdnote={full=https://arxiv.org/abs/2109.08266}
 }
