ABS talk, AFLTeam software, LID arxiv

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1291,6 +1291,16 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2108.10130}
 }
 
+@misc{weera2021local,
+  title={Local Intrinsic Dimensionality Signals Adversarial Perturbations},
+  author={Sandamal Weerasinghe and Tansu Alpcan and Sarah M. Erfani and Christopher Leckie and Benjamin I. P. Rubinstein},
+  note={arXiv:2109.11803 [cs.LG]},
+  year={2021},
+  month={Sep},
+  presort={18},
+  rmdnote={pdf=https://arxiv.org/abs/2109.11803}
+}
+
 @inproceedings{marchant2022hard,
   title={Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
   author={Neil G. Marchant and Benjamin I. P. Rubinstein and Scott Alfeld},
