--- a/software.Rmd
+++ b/software.Rmd
@@ -17,7 +17,13 @@ My [group](group.html) and I have implemented our research contributions as usef
 
 [<img src="images/d-blink.png" style="width:150px; margin-right: 24px" align="left">](https://github.com/ngmarchant/dblink)
 
-[**`d-blink`**](https://github.com/ngmarchant/dblink) is an open-source Apache Spark package for end-to-end Bayesian statistical record linkage. The package implements our [[Marchant et al. 2020]](https://amstat.tandfonline.com/doi/full/10.1080/10618600.2020.1825451) extensions to the `blink` model of [[Steorts 2015]](https://projecteuclid.org/euclid.ba/1441790411). As a fully Bayesian model, `blink` models a (posterior) distribution over all matchings of records, useful for propagating uncertainty through downstream analyses. The approach is also unsupervised, meaning it does not require ground-truth annotations of examples of matching records to train on. `d-blink` makes a number of non-trivial extensions that facilitate distributed inference for significantly scaling `blink` up to larger datasets.  
+[**`d-blink`**](https://github.com/ngmarchant/dblink) is an open-source Apache Spark package for end-to-end Bayesian statistical record linkage. The package implements our [[Marchant et al. 2020]](https://amstat.tandfonline.com/doi/full/10.1080/10618600.2020.1825451) extensions to the `blink` model of [[Steorts 2015]](https://projecteuclid.org/euclid.ba/1441790411). As a fully Bayesian model, `blink` models a (posterior) distribution over all matchings of records, useful for propagating uncertainty through downstream analyses. The approach is also unsupervised, meaning it does not require ground-truth annotations of examples of matching records to train on. `d-blink` makes a number of non-trivial extensions that facilitate distributed inference for significantly scaling `blink` up to larger datasets.
+
+***
+
+[<img src="images/aflteam.png" style="width:150px; margin-right: 24px" align="left">](https://github.com/MelbourneFuzzingHub/aflteam?s=09)
+
+[**`AFLTeam`**](https://github.com/MelbourneFuzzingHub/aflteam?s=09) is an open-source parallel coverage-guided grebox fuzzing system for finding software bugs. It employs dynamic task allocation using graph partitioning and search algorithms to best optimise fuzzing for parallel computing settings. It implements the ASE'21 paper [[Pham et al. 2021]](https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf).
 
 ***
 
