ARC DP22, IEEEToIT pubd

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1115,16 +1115,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pub=https://papers.nips.cc/paper/2021/hash/937936029af671cf479fa893db91cbdd-Abstract.html;full=https://arxiv.org/abs/2104.00671}
 }
 
-@article{edwards2020a,
-  title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
-  author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
-  journal={IEEE Transactions on Information Theory},
-  note = {Accepted},
-  year={2021},
-  presort={02},
-  rmdnote={full=https://arxiv.org/abs/2007.05975;pub=https://ieeexplore.ieee.org/document/9576501}
-}
-
 @inproceedings{marchant2021needle,
   title={Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance},
   author={Neil G. Marchant and Benjamin I. P. Rubinstein},
@@ -1310,4 +1300,16 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={Accepted},
   presort={01},
   rmdnote={full=https://arxiv.org/abs/2109.08266}
+}
+
+@article{edwards2020a,
+  title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
+  author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
+  journal={IEEE Transactions on Information Theory},
+  volume={68},
+  number={1},
+  pages={538--548},
+  year={2022},
+  presort={02},
+  rmdnote={full=https://arxiv.org/abs/2007.05975;pub=https://ieeexplore.ieee.org/document/9576501}
 }
