--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1313,3 +1313,13 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={02},
   rmdnote={full=https://arxiv.org/abs/2007.05975;pub=https://ieeexplore.ieee.org/document/9576501}
 }
+
+@inproceedings{liu2022state,
+  title = {State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing},
+  author = {Dongge Liu and Van-Thuan Pham and Gidon Ernst and Toby Murray and Benjamin I.P. Rubinstein},
+  booktitle = {IEEE International Conference on Software Analysis, Evolution and Reengineering 2022},
+  year = {2022},
+  series = {SANER},
+  note = {REproducibility Studies and NEgative Results (RENE) Track},
+  presort={03}
+}
