--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1194,7 +1194,9 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   series={ICDM},
   booktitle={2021 IEEE 21th International Conference on Data Mining},
-  presort={09}
+  pages={459--468},
+  presort={09},
+  rmdnote={pub=https://ieeexplore.ieee.org/document/9679034}
 }
 
 @inproceedings{Sun2021A,
