--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1248,7 +1248,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering},
   series={ASE},
   note={New Ideas and Emerging Results (NIER) track},
-  rmdnote={code=https://github.com/MelbourneFuzzingHub/aflteam?s=09;full=https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf},
+  rmdnote={code=https://github.com/MelbourneFuzzingHub/aflteam?s=09;full=https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf;pub=https://ieeexplore.ieee.org/document/9678810},
+  pages={1337--1341},
   presort={14}
 }
 
@@ -1323,5 +1324,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year = {2022},
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
-  presort={03}
+  presort={03},
+  rmdnote={full=https://arxiv.org/abs/2112.15498}
 }
