--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1302,7 +1302,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={AAAI},
   note={Accepted},
   presort={01},
-  rmdnote={full=https://arxiv.org/abs/2109.08266}
+  rmdnote={full=https://arxiv.org/abs/2109.08266;code=https://github.com/ngmarchant/attack-unlearning}
 }
 
 @article{edwards2020a,
