--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1107,7 +1107,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
 @inproceedings{yang2021characterizing,
   title={Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness},
   year={2021},
-  author={Yang, Zhuolin and Li, Linyi and Xu, Xiaojun and Zuo, Shiliang and Chen, Qian and Rubinstein, Benjamin and Zhang, Ce and Li, Bo},
+  author={Yang, Zhuolin and Li, Linyi and Xu, Xiaojun and Zuo, Shiliang and Chen, Qian and Zhou, Pan and Rubinstein, Benjamin and Zhang, Ce and Li, Bo},
   presort={01},
   booktitle={Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems},
   series={NeurIPS},
