--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1317,6 +1317,16 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={full=https://arxiv.org/abs/2007.05975;pub=https://ieeexplore.ieee.org/document/9576501}
 }
 
+@inproceedings{wang2022a,
+  title={Measuring and Mitigating Name Biases in Neural Machine Translation},
+  author={Jun Wang and Benjamin I. P. Rubinstein and Trevor Cohn},
+  booktitle={Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics},
+  series={ACL},
+  year={2022},
+  presort={03},
+  note={Accepted}
+}
+
 @inproceedings{liu2022state,
   title = {State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing},
   author = {Dongge Liu and Van-Thuan Pham and Gidon Ernst and Toby Murray and Benjamin I.P. Rubinstein},
@@ -1324,6 +1334,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year = {2022},
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
-  presort={03},
+  presort={04},
   rmdnote={full=https://arxiv.org/abs/2112.15498}
 }
