--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1294,6 +1294,16 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2109.11803}
 }
 
+@inproceedings{jin2022are,
+  title={Are We There Yet? Timing and Floating-Point Attacks on Differential Privacy Systems},
+  author={Jiankai Jin and Eleanor McMurtry and Benjamin I. P. Rubinstein and Olga Ohrimenko},
+  year={2022},
+  booktitle={Proceedings of the 43rd IEEE Symposium on Security and Privacy},
+  note={Accepted},
+  presort={01},
+  rmdnote={full=https://arxiv.org/abs/2112.05307}
+}
+
 @inproceedings{marchant2022hard,
   title={Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
   author={Neil G. Marchant and Benjamin I. P. Rubinstein and Scott Alfeld},
@@ -1301,7 +1311,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the 36th AAAI Conference on Artificial Intelligence},
   series={AAAI},
   note={Accepted},
-  presort={01},
+  presort={02},
   rmdnote={full=https://arxiv.org/abs/2109.08266;code=https://github.com/ngmarchant/attack-unlearning}
 }
 
@@ -1313,7 +1323,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   number={1},
   pages={538--548},
   year={2022},
-  presort={02},
+  presort={03},
   rmdnote={full=https://arxiv.org/abs/2007.05975;pub=https://ieeexplore.ieee.org/document/9576501}
 }
 
@@ -1323,7 +1333,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics},
   series={ACL},
   year={2022},
-  presort={03},
+  presort={04},
   note={Accepted}
 }
 
@@ -1334,6 +1344,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year = {2022},
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
-  presort={04},
+  presort={05},
   rmdnote={full=https://arxiv.org/abs/2112.15498}
 }
