--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1203,11 +1203,11 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   title={A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons},
   author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
   year={2021},
-  booktitle={2021 IEEE 60th Conference on Decision and Control},
+  booktitle={2021 60th IEEE Conference on Decision and Control},
   series={CDC},
-  note={Accepted},
+  pages={2690--2695},
   presort={10},
-  rmdnote={full=http://arxiv.org/abs/2109.14208}
+  rmdnote={full=http://arxiv.org/abs/2109.14208;pub=https://ieeexplore.ieee.org/document/9683543}
 }
 
 @inproceedings{wang2021putting,
